--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "An Ethereum Marketplace",
   "author": "gregory@dappuniversity.com",
   "dependencies": {
+    "@material-ui/core": "^4.9.5",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
     "babel-preset-es2015": "6.24.1",
@@ -17,6 +18,7 @@
     "react": "16.8.4",
     "react-bootstrap": "1.0.0-beta.5",
     "react-dom": "16.8.4",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "2.1.3",
     "truffle": "5.0.5",
     "web3": "1.0.0-beta.55"
